pages and refactors products(and manufacturers a bit)