@@ -1,24 +1,20 @@
 package com.example.app.service;
 
+import com.example.app.dto.ManufacturerProductCountDTO;
 import com.example.app.model.Manufacturer;
 import com.example.app.dto.model.ManufacturerDTO;
-import com.example.app.dto.model.ProductDTO;
-import com.example.app.repository.IManufacturerRepository;
-import com.example.app.repository.IProductRepository;
+import com.example.app.repository.ManufacturerRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
 public class ManufacturerService implements IManufacturerService{
     @Autowired
-    IManufacturerRepository manufacturerRepository;
-    @Autowired
-    IProductRepository productRepository;
+    ManufacturerRepository manufacturerRepository;
     public List<ManufacturerDTO> getAllManufacturers(Integer pageNumber, Integer pageSize){
         return manufacturerRepository.findAll(PageRequest.of(pageNumber, pageSize))
                 .stream()
@@ -49,16 +45,10 @@ public class ManufacturerService implements IManufacturerService{
     }
 
     @Override
-    public List<ProductDTO> getProductsByManufacturerId(Integer id, Integer pageNumber, Integer pageSize) {
-        Manufacturer manufacturer = manufacturerRepository.findById(id).orElse(null);
-        if(manufacturer == null){
-            return new ArrayList<>();
-        }
-        return productRepository
-                .findAllByManufacturer(manufacturer, PageRequest.of(pageNumber, pageSize))
-                .stream()
-                .map(ProductDTO::fromProduct)
-                .collect(Collectors.toList());
+    public List<ManufacturerProductCountDTO> getManufacturersSortedByProducts(Integer pageNumber, Integer pageSize) {
+        return manufacturerRepository
+                .getManufacturersSortedByProductCount(PageRequest.of(pageNumber, pageSize))
+                .toList();
     }
 
 }
